<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:layout_margin="6dp"
    android:id="@+id/menu_vaccinatedTextView"
    android:background="@drawable/vaccinated_box">

    <TextView
        android:id="@+id/menu_vaccinatedTextViewLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_vaccinated"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_vaccinatedLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_vaccinatedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu_vaccinatedTextViewLocationName"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_TotalVaccinatedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_currentVaccinatedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people_addition"
            android:textSize="11sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>