<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:id="@+id/clinicLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/corona_total_page_box"
            android:layout_marginTop="@dimen/corona_total_page_box"
            android:layout_marginEnd="@dimen/corona_total_page_box"
            android:layout_marginBottom="@dimen/corona_total_page_box"
            android:background="@drawable/total2"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/deathLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/clinicTextViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clinic_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/clinicTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/corona_total_page_box"
            android:layout_marginTop="@dimen/corona_total_page_box"
            android:layout_marginEnd="@dimen/corona_total_page_box"
            android:layout_marginBottom="@dimen/corona_total_page_box"
            android:background="@drawable/total1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/curedLayout"
            app:layout_constraintEnd_toStartOf="@+id/clinicLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/totalTextViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalAdditionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people_addition"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/curedLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/corona_total_page_box"
            android:layout_marginTop="@dimen/corona_total_page_box"
            android:layout_marginEnd="@dimen/corona_total_page_box"
            android:layout_marginBottom="@dimen/corona_total_page_box"
            android:background="@drawable/total3"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deathLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalLayout">

            <TextView
                android:id="@+id/curedTextViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/curedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deathLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/corona_total_page_box"
            android:layout_marginTop="@dimen/corona_total_page_box"
            android:layout_marginEnd="@dimen/corona_total_page_box"
            android:layout_marginBottom="@dimen/corona_total_page_box"
            android:background="@drawable/total4"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/curedLayout"
            app:layout_constraintTop_toBottomOf="@+id/clinicLayout">

            <TextView
                android:id="@+id/deathTextViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/death_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/deathTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>